sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:43: error: not found: value getHolePos
    move(getHolePos()+1,0);
         ^